@@ -48,6 +48,7 @@ delete.2 = STRING:key Keypad-.
 backspace.1 = STRING:key Backspace
 editcancel.1 = STRING:key Escape
 search.1 = STRING:key F6
+search.1 = STRING:key /
 next.1 = STRING:key Tab
 pause.1 = STRING:key Pause
 pause.2 = STRING:key F1
