@@ -1,2 +1,1 @@
-uqm_CFILES="direct.c filecntl.c getres.c loadres.c mapres.c
-		propfile.c resinit.c stringbank.c"
+uqm_CFILES="direct.c filecntl.c getres.c loadres.c stringbank.c propfile.c resinit.c"
