@@ -1,4 +1,10 @@
 Changes towards version 0.7:
+- .cfg files are now kept as subtrees of the resource map - Michael
+- Flight control data no longer unnecessarily copied to config directory - Michael
+- Index loading/saving now can operate on subtrees - Michael
+- Videos vs. slide now controlled by a '3dovideo' addon - Michael
+- New video resource type for 3DO videos - Michael
+- Allow reaching 999.9:999.9 in HyperSpace (bug #628), from Nic
 - Use system getopt_long() when available - SvdB
 - Added --addondir commandline option - Mika
 - Case insensitive matching when looking for .zip/.uqm/.rmp files - SvdB
